2008-1-26 Eloy Duran <e.duran@superalloy.nl>

	* Rakefile,
	  lib/rucola/dependencies.rb,
	  test/fixtures/dependencies,
	  test/fixtures/dependencies/foo,
	  test/fixtures/dependencies/foo.rb,
	  test/fixtures/dependencies/foo/bar.rb,
	  test/fixtures/dependencies/foo/baz.rb,
	  test/test_dependencies.rb,
	  test/test_fsevents.rb,
	  test/test_helper.rb:

	- Added a Dependencies class which can resolve the dependencies that are specified with #dependency().
	  TODO: It hasn't been integrated with Initializer yet and there are no docs.
	- test_fsevents.rb will now cleanup after itself
	- Set '$VERBOSE = nil' in test_helper.rb so that we don't get flooded by constants being redefined.

2008-1-11 Eloy Duran <e.duran@superalloy.nl>

	* lib/rucola/reloader.rb:

	Fixed some minor errors in the Reloader docs.

2008-1-11 Eloy Duran <e.duran@superalloy.nl>

	* test/test_initializer.rb:

	Fixed some errors in the naming of the specs.

2008-1-11 Eloy Duran <e.duran@superalloy.nl>

	* Manifest.txt,
	  app_generators/rucola/templates/config/environment.rb,
	  lib/rucola/initializer.rb,
	  lib/rucola/reloader.rb,
	  test/fixtures/some_reloadable_class.rb,
	  test/test_initializer.rb,
	  test/test_reloader.rb:

	Added Rucola::Reloader, which uses Rucola::FSEvents to watch the app/controllers path for modifications
	and undefines the instance & class methods and reloads the class.
	In debug mode this will be enabled by default, you can override this setting on the `config` of Initializer.
	So a good place would be environment.rb.

2008-1-11 Eloy Duran <e.duran@superalloy.nl>

	* Manifest.txt,
	  lib/rucola/rucola_support/core_ext/ruby/file.rb,
	  lib/rucola/rucola_support/core_ext/ruby/object.rb,
	  lib/rucola/rucola_support/core_ext/ruby/string.rb,
	  test/test_core_ext.rb:

	Added to rucola support:
	String#constantize, File.constantize(), Object.metaclass, Object.extended_class_methods,
	Object.own_class_methods, Object.original_class_methods
