@@ -37,6 +37,7 @@ lib/autotest/pass.png
 lib/autotest/rucola.rb
 lib/autotest/sound.rb
 lib/rucola.rb
+lib/rucola/dependencies.rb
 lib/rucola/fsevents.rb
 lib/rucola/info_plist.rb
 lib/rucola/initializer.rb
@@ -103,9 +104,13 @@ test/fixtures/Info.plist
 test/fixtures/MainMenu.nib/classes.nib
 test/fixtures/MainMenu.nib/info.nib
 test/fixtures/MainMenu.nib/keyedobjects.nib
+test/fixtures/dependencies/foo.rb
+test/fixtures/dependencies/foo/bar.rb
+test/fixtures/dependencies/foo/baz.rb
 test/fixtures/some_reloadable_class.rb
 test/test_controller_generator.rb
 test/test_core_ext.rb
+test/test_dependencies.rb
 test/test_document_model_generator.rb
 test/test_fsevents.rb
 test/test_generator_helper.rb
